  * Add MySQL support. Ticket #44.
  * Switch to XDoclet2. Ticket #45.
  * Make junit.jar an explicit dependency. Ticket #46.
  * IOUtilsTest fails on Windows. Ticket #47.
  * Metadata Editor should render tree in Alpha order.
    Ticket #48.
  * Added Activation. Ticket #49.
  * COMPACT Fomat Delimiter found in data stream breaks
    response. Ticket #51.

Version 3.0.0b3 - 29 Apr 2009

  * Update Windows installation to use current Java-Service. 
    Ticket #25.
  * Update embedded Tommcat server to 6.0. Ticket #28.
  * Refresh third party support libraries. Ticket #29.
  * Update NullResultSet for JDBC 4.0. Ticket #34.
  * Create Metadata and Image directory if don't exist. Ticket #36.
  * Admin tool fails to delete Lookups. Ticket #37.
  * COMPACT date rendering for pre 1.7.2 is wrong. Ticket #38.

Version 3.0.0b2 - 13 Apr 2009

  * Make Variman more tolerant of out of spec 1.5 metadata.
  * Add Metadata Migration tool. Ticket #33.

Version 3.0.0b1 - 06 Apr 2009

  * Merged rets-client into Variman base.
  * Add ability to listen on specific IP address. Ticket #15.
  * Metadata Loader warns on DBName for METADATA-CLASS. Ticket #16.
  * Metadata Loader warns on StandardName for METADATA-OBJECT. Ticket #17.
  * Support X- extensions to metadata. Ticket #23.
  * RETS 1.7.2 enhancements. Ticket #24.
  * Added Metadata Editor to Admin tool. This is still experimental. Ticket #31.
  
Version 2.1.11 - 20 June 2007

  * On queries with Count=2 return total count, ignoring offset and limit.
  * <MAXROWS/> now returned at the end of COMPACT and COMPACT-DECODED format
    if the row limit was exceeded
  * Windows binary service version will now use my memory.  It was limited
    to default of 512MB of heap, this has been increased to 1.5GB
  * When running standalone, can now bind to specific IPs
  * Developers can override default behaviour in some instances by
    swapping interfaces using Swing.

Version 2.1.10 - 05 July 2006
